# model-sherpa

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  UsersMikeyAppDataLocalTemppytest-of-Mikeypytest-66test_sherpa_export_csv0exportssherpa_export.csv  UsersMikeyAppDataLocalTemppytest-of-Mikeypytest-66test_sherpa_export_json0exportssherpa_export.json  UsersMikeyAppDataLocalTemppytest-of-Mikeypytest-67test_sherpa_export_csv0exportssherpa_export.csv  UsersMikeyAppDataLocalTemppytest-of-Mikeypytest-67test_sherpa_export_json0exportssherpa_export.json  UsersMikeyAppDataLocalTemppytest-of-Mikeypytest-79test_sherpa_export_csv0exportssherpa_export.csv  UsersMikeyAppDataLocalTemppytest-of-Mikeypytest-79test_sherpa_export_json0exportssherpa_export.json  __init__.py  benchmark.py  benchmark_report.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_aliases.py  test_arg_repair.py  test_benchmark.py  test_features.py  test_locking.py  test_slash_commands.py  test_smoke.py
